--- a/index.html
+++ b/index.html
@@ -38,34 +38,34 @@
 
 <body>
     <div class="task">
-        <h1>受注仕事</h1>
+        <h1>工事内容</h1>
         <h2>Description</h2>
 
         <div class="task-contents1">
             <div class="task-contents1-1">
-                <img src="1.jpeg">
-                <h3>電気工事</h3>
-                <h4>egherouaghreoaghruaggasglkegealg</h4>
+                <img src="2.jpeg">
+                <h3>新築での電気設備工事</h3>
+                <h4></h4>
             </div>
 
             <div class="task-contents1-2">
-                <img src="1.jpeg">
-                <h3>電気工事</h3>
-                <h4>egherouaghreoaghruaggasglkegealg</h4>
+                <img src="3.jpeg">
+                <h3>リフォームでの電気設備工事</h3>
+                <h4></h4>
             </div>
         </div>
 
         <div class="task-contents2">
             <div class="task-contents2-1">
                 <img src="1.jpeg">
-                <h3>電気工事</h3>
-                <h4>egherouaghreoaghruaggasglkegealg</h4>
+                <h3>オール電化工事</h3>
+                <h4></h4>
             </div>
 
             <div class="task-contents2-2">
                 <img src="1.jpeg">
-                <h3>電気工事</h3>
-                <h4>egherouaghreoaghruaggasglkegealg</h4>
+                <h3>家電販売</h3>
+                <h4></h4>
             </div>
         </div>
     </div>
