--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
 
         <div class="task-contents2">
             <div class="task-contents2-1">
-                <img src="1.jpeg">
-                <h3>オール電化工事</h3>
+                <img src="4.jpeg">
+                <h3>アンテナ工事</h3>
                 <h4></h4>
             </div>
 
             <div class="task-contents2-2">
-                <img src="1.jpeg">
+                <img src="5.jpeg">
                 <h3>家電販売</h3>
                 <h4></h4>
             </div>
@@ -75,26 +75,26 @@
         <h2>Recent Work</h2>
 
         <div class="work1">
-            <img src="1.jpeg">
+            <img src="2.jpeg">
             <div class="work-content">
-                <h1>下市小学校　テレビ導入</h1>
-                <h2>仕事内容をごちゃごちゃと</h2>
+                <h1>新築の電気設備工事</h1>
+                <h2></h2>
             </div>
         </div>
 
         <div class="work1">
-            <img src="1.jpeg">
+            <img src="3.jpeg">
             <div class="work-content">
-                <h1>下市小学校　テレビ導入</h1>
-                <h2>仕事内容をごちゃごちゃと</h2>
+                <h1>リフォームの電気設備工事</h1>
+                <h2></h2>
             </div>
         </div>
 
         <div class="work1">
-            <img src="1.jpeg">
+            <img src="4.jpeg">
             <div class="work-content">
-                <h1>下市小学校　テレビ導入</h1>
-                <h2>仕事内容をごちゃごちゃと</h2>
+                <h1>アンテナ工事</h1>
+                <h2></h2>
             </div>
         </div>
     </div>
