--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
     </div>
     <div class="header">
         <h1>ナカイデンキ<br>Nakai Electroninc</h1>
-        <h2 data-aos="fade-up" data-aos-delay="1000">あなたの暮らしを豊かに<br>ナカイデンキ</h2>
+        <h2 data-aos="zoom-in" data-aos-delay="1000" data-aos-duration="1000">あなたの暮らしを豊かに<br>ナカイデンキ</h2>
         <div class="home">
             <ul>
                 <li>お仕事のご依頼はコチラ</li>
             </ul>
         </div>
-        <img src="1.jpeg" data-aos="fade-up" data-aos-delay="2000"> 
+        <img src="1.jpeg" data-aos="zoom-in" data-aos-delay="2000" data-aos-duration="1000"> 
     </div>
 </header>
 
 <body>
-    <div class="task" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="250" data-aos-duration="1500"> 
+    <div class="task" data-aos="fade-up" data-aos-delay="1000" data-aos-duration="1500" data-aos-anchor-placement="top-center">
         <h1>工事内容</h1>
         <h2>Description</h2>
 
@@ -71,7 +71,7 @@
         </div>
     </div>
 
-    <div class="recent" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="250" data-aos-duration="1500">
+    <div class="recent" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="1000" data-aos-anchor-placement="top-center" >
         <h1>最近のご依頼</h1>
         <h2>Recent Work</h2>
 
@@ -116,8 +116,8 @@ window.onload = ()=>{
 
 <script>
     AOS.init({
-        easing:'ease-out-back',
-        duration:1000
+        easing:'linear',
+        duration:500
     });
     </script>
 
